# slopmeter-python

./: CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md
scripts/: compare_claude_sources.py
src/slopmeter/: __init__.py  bundle_export.py  cli.py  device_meta.py  export.py  html_document.py  model_prices.py  models.py  output_path.py  pricing.py  provider_meta.py  render.py  server.py  utils.py  yaml_bundle.py
src/slopmeter/providers/: __init__.py  amp.py  claude.py  cursor.py  open_code.py  pi.py
src/slopmeter_py/: cli.py  export.py  output_path.py  provider_meta.py  render.py  utils.py
src/slopmeter_py/providers/: amp.py  codex.py  gemini.py  open_code.py  pi.py
tests/: test_cli.py  test_cursor_provider.py  test_output_path.py  test_pricing.py  test_render.py  test_server.py
