[project]
name = "slopmeter"
version = "0.1.0"
description = "Local usage heatmaps and web viewer for AI coding tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "pillow>=11.2.1",
  "rich>=14.0.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
slopmeter = "slopmeter.cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slopmeter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
